# cs2-project

./: .gitignore  CMakeLists.txt  README.md
dependencies/spdlog/details/: os-inl.h
src/: dllmain.cpp  globals.hpp  includes.hpp
src/features/: features.hpp
src/features/visuals/: visuals.cpp  visuals.hpp
src/hooks/: detour.hpp  hooks.cpp  hooks.hpp
src/hooks/create_move/: create_move.cpp  create_move.hpp
src/hooks/frame_stage_notify/: frame_stage_notify.cpp  frame_stage_notify.hpp
src/hooks/level_init/: level_init.cpp  level_init.hpp
src/hooks/present/: present.cpp  present.hpp
src/hooks/resize_buffers/: resize_buffers.cpp  resize_buffers.hpp
src/hooks/resizebuffers/: resizebuffers.cpp  resizebuffers.hpp
src/hooks/wndproc/: wndproc.cpp  wndproc.hpp
src/menu/: menu.cpp  menu.hpp
src/sdk/: cheat.cpp  cheat.hpp  client.hpp  engine_client.hpp  global_vars_base.hpp  interfaces.cpp  interfaces.hpp  render_system.hpp
src/sdk/classes/: player.hpp  user_cmd.hpp
src/sdk/interfaces/: client_class.hpp  csgo_input.hpp  engine_client.hpp  global_vars.hpp  input.hpp  interfaces.cpp  interfaces.hpp  schema_system.hpp
src/sdk/math/: color.hpp  math.cpp  math.hpp  vector.hpp
src/sdk/schema/: schema.cpp  schema.hpp
src/sdk/schema_manager/: schema_manager.cpp  schema_manager.hpp
src/sdk/tier0/: tier0.cpp  tier0.hpp
src/utils/: fnv1a.hpp  padding.hpp  signature.hpp  utils.cpp  utils.hpp  xorstr.hpp
src/utils/console/: console.cpp  console.hpp
src/utils/render/: render.cpp  render.hpp
src/utils/winapi/: nt.hpp  ntapi.hpp  winapi.cpp  winapi.hpp
